# pattern_design_demo

./: adapter.tex  builder.tex  chain.tex  factory.tex  main.tex  singleton.tex  strategy.tex
codes/: CMakeLists.txt  adapter.cpp  builder.cpp  chain.cpp  command.cpp  factory.cpp  singleton.cpp  strategy.cpp
